--- a/static/css/custom_style.css
+++ b/static/css/custom_style.css
@@ -17,7 +17,8 @@
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-}
+    z-index: 1;
+  }
 
 #footer {
   position: -webkit-sticky;
